# scrapy-poet

./: .bumpversion.cfg  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: publish.yml  scrapy-unreleased.yml  test.yml
autoextract_poet/: exceptions.py  inputs.py  mixins.py  pages.py  providers.py  query.py  retry.py  utils.py
docs/: advanced.rst  api_reference.rst  changelog.rst  conf.py  contributing.rst  dynamic-deps.rst  index.rst  license.rst  overrides.rst  overview.rst  project_commands.rst  providers.rst  requirements.in  requirements.txt  rules-from-web-poet.rst  settings.rst  stats.rst  testing.rst
docs/_ext/: __init__.py
docs/intro/: advanced-tutorial.rst  basic-tutorial.rst  install.rst  overview.rst  pitfalls.rst  setup.rst  tutorial.rst
example/example/: autoextract.py  customizations.py  settings.py
example/example/spiders/: books_01.py  books_02.py  books_02_1.py  books_02_2.py  books_02_3.py  books_03.py  books_03_overrides_01.py  books_03_overrides_02.py  books_03_overrides_03.py  books_04.py  books_04_overrides_01.py  books_04_overrides_02.py  books_04_overrides_03.py  books_05.py  books_05_1.py  books_06.py  books_06_2.py
scrapy_po/: __init__.py  customizations.py  middleware.py  page_input_providers.py  page_inputs.py  providers.py  requests_mixin.py  utils.py  webpage.py
scrapy_poet/: __init__.py  _addon.py  _request_fingerprinter.py  api.py  autoextract.py  backend.py  cache.py  commands.py  downloader.py  downloadermiddlewares.py  errors.py  injection.py  injection_errors.py  middleware.py  overrides.py  page_input_providers.py  po_tester.py  providers.py  registry.py  repository.py  spidermiddlewares.py  utils.py
scrapy_poet/autoextract/: providers.py
scrapy_poet/commands/: override.py  startproject.py
scrapy_poet/templates/: default.template  default_test.template
scrapy_poet/utils/: __init__.py  _deprecation.py  mockserver.py  testing.py
tests/: __init__.py  conftest.py  mockserver.py  test_autoextract.py  test_autoextract_poet.py  test_backend.py  test_cache.py  test_callback_for.py  test_commands.py  test_downloader.py  test_injection.py  test_inline.py  test_middleware.py  test_overrides.py  test_page_input_providers.py  test_page_inputs.py  test_providers.py  test_regex_overrides.py  test_registry.py  test_repository.py  test_request_fingerprinter.py  test_request_fingerprinting.py  test_response_required_logic.py  test_retries.py  test_scrapy_dependencies.py  test_scrapy_providers.py  test_scrapy_settings.py  test_utils.py  test_web_poet_rules.py  utils.py
tests/autoextract/: test_query.py
tests/commands/: test_startproject.py
tests/po_lib/: __init__.py  main.py  subclasses.py
